==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

 - Changed default required shard copies for table creation and write
   operations from quorum to ``all``.

 - Changed the default value of ``number_of_replicas`` from 1 to ``0-1``.

Changes
=======

 - Expose new setting ``write.wait_for_active_shards`` to allow users to
   adjust the required shard copies for write operation to their needs.

 - Expose fields for ``information_schema.columns`` and
   ``information_schema.tables`` so that it conforms to SQL-99 standard.

 - Extended the output of the  ``EXPLAIN`` statement.

 - Added support for joins on virtual tables.

Fixes
=====

 - Fixed an issue that causes aliases used in the select list to get lost on
   subselect queries.

 - The correct error messages and codes are now thrown for REST actions.

 - Fixed a bug in the memory accounting of the circuit breaker for HTTP
   results when querying ``GEO_SHAPE`` columns.

 - Fixed an issue that could cause non-grouping aggregations on virtual tables
   to return the wrong result.

 - Reflect internally used default size for ``translog.flush_threshold_size``
   also in documentation and expose the correct default value in table
   settings.

 - Added missing table setting ``translog.durability`` which is required and
   and must be set accordingly so that ``translog.sync_interval`` takes effect.

 - Fixed a NPE when querying ``sys.shards`` table

 - Log failed authentication attempts at log level ``WARN``